# LabEDD-Practica01

Solitario C++/: CMakeLists.txt  juegoSolitarioC.cpp  juegoSolitarioC.h  main.cpp  menuPrincipal.cpp  menuPrincipal.h  menuPrincipalSolitario.cpp  menuPrincipalSolitario.h
