cmake_minimum_required(VERSION 3.27)
project(Solitario_C__)

set(CMAKE_CXX_STANDARD 23)

add_executable(Solitario_C__ main.cpp
        menuPrincipal.cpp
        menuPrincipal.h
        menuPrincipal.h
        menuPrincipalSolitario.cpp
        menuPrincipalSolitario.h
        juegoSolitarioC.cpp
        juegoSolitarioC.h
)
